# skills_rag

./: .gitignore  pdf-func.py  pyproject.toml  rag_agent.py  specification.md  test_tn_metrics.csv  test_tn_metrics_results.csv  test_tn_metrics_summary.csv  想定質問.csv  想定質問_results.csv  想定質問_summary.csv
skills/rag/: SKILL.md  rag_agent.py
skills/rag/optimization/: folder_optimizer.py
skills/rag/pdf_analysis/: analyzer.py  converter.py  document_processor.py  file_manager.py
skills/rag/scripts/: read_data.py
